fixing horizontal scrolling on home page

--- a/root_folder/css/stylesheet.css
+++ b/root_folder/css/stylesheet.css
@@ -280,7 +280,7 @@ nav {
         font-size: xx-large;
         position: fixed;
         right: 4px;
-        top: 65px;
+        top: 52px;
         z-index: 1;
         color: #0B9446;
         display: inline-block;
